# PractorFlow

./: .dockerignore  .gitignore  CONTRIBUTING.MD  Dockerfile  README.md  compose.yaml  cpu.py  dbg.py  knowledge_sample.py  pyai-examples.py  requirements.txt  sample.py  test-requirements.txt  test_future.py  test_qwen3vl.py
config/options/: knowledge.env  logger.env  model.env  options.env
llm/: __init__.py  factory.py  llama_cpp_runner.py  llm_config.py  transformers_runner.py
llm/base/: llm_runner.py  session.py  session_store.py
llm/document/: document_loader.py  embeddings.py  memory_vector_store.py  temp_vector_store.py  vector_cleanup.py  vector_store_config.py
llm/knowledge/: __init__.py  chroma_knowledge_config.py  chroma_knowledge_store.py  knowledge_store.py
llm/pool/: model_handle.py  model_pool.py  pool_init.py
llm/pyai/: __init__.py  message_converter.py  model.py  stream_response.py  tools.py
llm/session/: memory_session_store.py
llm/tools/: __init__.py  base.py  base_web_search.py  knowledge_search.py  (+2 more)
logger/: __init__.py  logger.py
settings/: app_settings.py
src/: pyai-examples.py  sample.py
src/practorflow/: __init__.py  pyproject.toml
src/practorflow/converters/: torch_dtype_convertor.py
src/practorflow/llm/: __init__.py  factory.py  llama_cpp_runner.py  llm_config.py  transformers_runner.py
src/practorflow/llm/base/: llm_runner.py  session_store.py
src/practorflow/llm/document/: document_loader.py  embeddings.py
src/practorflow/llm/knowledge/: chroma_knowledge_config.py  chroma_knowledge_store.py
src/practorflow/llm/pool/: __init__.py  model_handle.py  model_pool.py
src/practorflow/llm/pyai/: __init__.py  message_converter.py  model.py  stream_response.py  tools.py
src/practorflow/llm/session/: memory_session_store.py
src/practorflow/llm/tools/: __init__.py  base_web_search.py  knowledge_search.py  serpapi_web_search.py  tool_registry.py
src/practorflow/logger/: __init__.py  logger.py
src/practorflow/settings/: app_settings.py
(+6 files in other folders)
